e2e/networking/endpoint-slices/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: endpoint-slices
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: 00-install.yaml
    - assert:
        file: 00-assert.yaml
  - catch:
    - events:
        namespace: $NAMESPACE
    name: step-01
    try:
    - script:
        content: |
          set -e
          slice_count=$(kubectl get endpointslices -n $NAMESPACE -l kubernetes.io/service-name=nginx-svc --no-headers | wc -l)
          test "$slice_count" -eq 1
    - script:
        content: |
          set -e
          endpoint_count=$(kubectl get endpointslices -n $NAMESPACE -l kubernetes.io/service-name=nginx-svc -o jsonpath='{range .items[0].endpoints[*]}{.addresses[0]}{"\n"}{end}' | grep -c .)
          test "$endpoint_count" -eq 2
